--- a/Builds/VisualStudio2015/DiddyBop_.vcxproj
+++ b/Builds/VisualStudio2015/DiddyBop_.vcxproj
@@ -1796,6 +1796,7 @@
     <ClCompile Include="..\..\JuceLibraryCode\juce_video.cpp"/>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Source\FilmStripKnob.h"/>
     <ClInclude Include="..\..\Source\Compressor.h"/>
     <ClInclude Include="..\..\Source\ParametricEQFilter.h"/>
     <ClInclude Include="..\..\Source\PluginProcessor.h"/>
